unpackaged/main/default/objects/litify_pm__lit_Note__c/litify_pm__lit_Note__c.object-meta.xml
<CustomObject>
    <label>Litify Note</label>
    <nameField>
        <label>Note Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Litify Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>