unpackaged/main/default/objects/litify_pm__lit_Note__c/fields/litify_pm__lit_Account__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account / Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Litify Notes</relationshipLabel>
    <relationshipName>lit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>