unpackaged/main/default/objects/litify_pm__lit_Note__c/fields/litify_pm__lit_Note__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Note__c</fullName>
    <label>Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>