unpackaged/main/default/objects/litify_pm__lit_Note__c/fields/litify_pm__lit_Referral__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>litify_pm__Referral__c</referenceTo>
    <relationshipLabel>Litify Notes</relationshipLabel>
    <relationshipName>lit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>