unpackaged/main/default/objects/litify_pm__lit_Note__c/fields/litify_pm__lit_Related_To__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Related_To__c</fullName>
    <formula>IF( ISBLANK( litify_pm__lit_Damage__c ), &#39;&#39;, &#39;Damage, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Expense__c ), &#39;&#39;, &#39;Expense, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Insurance__c ), &#39;&#39;, &#39;Insurance, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Intake__c ), &#39;&#39;, &#39;Intake, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Matter__c ), &#39;&#39;, &#39;Matter, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Negotiation__c ), &#39;&#39;, &#39;Negotiation, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Account__c ), &#39;&#39;, &#39;Party, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Referral__c ), &#39;&#39;, &#39;Referral, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Request__c ), &#39;&#39;, &#39;Request, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Resolution__c ), &#39;&#39;, &#39;Resolution, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Role__c ), &#39;&#39;, &#39;Role, &#39;) &amp;
IF( ISBLANK( litify_pm__lit_Time_Entry__c ), &#39;&#39;, &#39;Time Entry, &#39;)</formula>
    <label>Related To</label>
    <type>Text</type>
</CustomField>