unpackaged/main/default/objects/litify_pm__lit_Note__c/fields/litify_pm__lit_Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Time_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Entry</label>
    <referenceTo>litify_pm__Time_Entry__c</referenceTo>
    <relationshipLabel>Litify Notes</relationshipLabel>
    <relationshipName>lit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>