unpackaged/main/default/objects/litify_pm__lit_Note__c/fields/litify_pm__lit_Topic__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Attorney Review</fullName>
            </value>
            <value>
                <fullName>Balance Verification</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Client Accepted Offer</fullName>
            </value>
            <value>
                <fullName>Client Missing</fullName>
            </value>
            <value>
                <fullName>Client Not Treating</fullName>
            </value>
            <value>
                <fullName>Client Welcome Call</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
            <value>
                <fullName>Depositions</fullName>
            </value>
            <value>
                <fullName>E-mail Received</fullName>
            </value>
            <value>
                <fullName>E-mail Sent</fullName>
            </value>
            <value>
                <fullName>Evidence</fullName>
            </value>
            <value>
                <fullName>Fax Received</fullName>
            </value>
            <value>
                <fullName>Fax Sent</fullName>
            </value>
            <value>
                <fullName>File Review</fullName>
            </value>
            <value>
                <fullName>File Transfer</fullName>
            </value>
            <value>
                <fullName>Independent Medical Exam (IME)</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
            <value>
                <fullName>Liens</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Memo</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pictures</fullName>
            </value>
            <value>
                <fullName>Police Report</fullName>
            </value>
            <value>
                <fullName>Property Damage</fullName>
            </value>
            <value>
                <fullName>Reduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>